--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FixIt | Smart Gadget Repair</title>
+  <title>FixFast | Smart Gadget Repair</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <!-- AOS Animation CSS -->
@@ -141,4 +141,5 @@
   </script>
 
 </body>
+
 </html>
